--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "@tanstack/react-query": "^5.29.0",
     "axios": "^1.10.0",
     "clsx": "^2.1.1",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "tailwind-merge": "^2.6.0",
@@ -43,6 +45,9 @@
     "zod": "3.24.2"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.10.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
@@ -54,6 +59,8 @@
   "scripts": {
     "start": "elizaos start",
     "dev": "elizaos dev",
+    "backend": "node backend/server.js",
+    "backend:dev": "node backend/server.js",
     "build": "tsc --noEmit && vite build && tsup",
     "lint": "prettier --write ./src",
     "type-check": "tsc --noEmit",
